--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "express-validator": "^6.12.0",
+        "mysql": "^2.18.1",
         "vue-router": "^3.5.2"
     }
 }
